# go/api/controllers/productController.go
@@ -7,7 +7,44 @@ import (
 	"project/internal/models"
 )
 
-func CreateProduct(c *gin.Context) {}
+// @Summary Crée un nouveau produit
+// @Description Crée un nouvel produit avec les informations fournies
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Param Authorization header string true "Insert your access token" default(Bearer Add access token here)
+// @Param product body models.Product true "Produit à créer"
+// @Success 200 {object} models.Product
+// @Failure 500 {object} gin.H "Erreur serveur interne"
+// @Router /create-product  [post]
+func CreateProduct(c *gin.Context) {
+	user, exists := c.Get("currentUser")
+	if !exists {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "User not logged"})
+		return
+	}
+
+	currentUser := user.(models.User)
+	if currentUser.Role != 1 {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "You are not authorized to create a product"})
+		return
+	}
+
+	var product models.Product
+	if err := c.ShouldBind(&product); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	if err := initializers.DB.Create(&product).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"message": "produit créé avec succès",
+		"product": product})
+}
 
 // @Summary Récupère tous les produits
 // @Description Récupère la liste de tous les produits
@@ -46,11 +83,11 @@ func GetProducts(c *gin.Context) {
 // @Security Bearer
 // @Param Authorization header string true "Insert your access token" default(Bearer Add access token here)
 // @Param id path int true "ID de l'utilisateur"
-// @Param user body models.Product true "Produit à mettre à jour"
+// @Param product body models.Product true "Produit à mettre à jour"
 // @Success 200 {object} models.Product
 // @Failure 404 {object} gin.H "Prodduit non trouvé"
 // @Failure 500 {object} gin.H "Erreur serveur interne"
-// @Router /product/{id}/update [put]
+// @Router /products/{id}/update [put]
 func UpdateProduct(c *gin.Context) {
 	user, exists := c.Get("currentUser")
 	if !exists {
@@ -91,7 +128,7 @@ func UpdateProduct(c *gin.Context) {
 // @Success 204 {object} nil
 // @Failure 404 {object} gin.H "produit non trouvé"
 // @Failure 500 {object} gin.H "Erreur serveur interne"
-// @Router /product/{id}/delete [delete]
+// @Router /products/{id}/delete [delete]
 func DeleteProduct(c *gin.Context) {
 	user, exists := c.Get("currentUser")
 	if !exists {
